--- a/day14/src-login/login-app/index.html
+++ b/day14/src-login/login-app/index.html
@@ -44,10 +44,45 @@
     }
 
     btn.onclick = function () {
-       if (user.value && pwd.value) {
-         postFn()
-       }
+      if (user.value && pwd.value) {
+        postFn()
+      }
     }
+
+
+  </script>
+
+
+  <script>
+
+    const arr = [{
+      id:1,
+      name: '把我'
+    },
+    {
+      id:2,
+      name: 'kkkk'
+    }
+  ]
+
+    arr.forEach((item, index) => {
+      if (item.id === 2) {
+        console.log(item, 'item')
+        item = {
+          "id": "4",
+          "name": "log"
+        }
+        arr.splice(index, 1, item)
+      }
+    })
+    
+    // for(var i = 0; i < arr.length; i++) {
+    //    if (i == 0) {
+    //     arr[i] = 'jjjj'
+    //    }
+    // }
+    console.log(arr)
+
 
 
   </script>
