--- a/day15/src-gulp-babel/src/index.html
+++ b/day15/src-gulp-babel/src/index.html
@@ -2,28 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
 <body>
-  
+   
 
   <h1>hello world</h1>
 
-  <script src="./js/axios.js"></script>
+  <script src="js/myAjax.js"></script>
   <script>
-    
-    axios.get('/api/movie', {
-      params: {
-        page:1,
-        size:5
-      }
-    }).then(res => {
-      console.log(res)
-    })
 
-  
+    ajax.get({
+      url: '/checkcode'
+    }).then(res => {
+      console.log(res, 'res')
+    })
   </script>
 </body>
 </html>
