--- a/day18-month-1/src-gulp-二级联动/app/index.html
+++ b/day18-month-1/src-gulp-二级联动/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
@@ -27,7 +27,7 @@
 
     // yiji 
     ajax.get({
-      url: '/provice'
+      url: '/province'
     }).then(list => {
       pro.innerHTML = list.map(item => {
         return `<option value=${item}> ${item} </option>`
